--- a/application/templates/feedback.html
+++ b/application/templates/feedback.html
@@ -10,7 +10,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Add georeferenced comments or feedback</h4>
       </div>
-      <div class="model-map" id="feedback-map"></div>
+      <div class="model-map" id="feedback-map" style="height:330px;"></div>
       <div class="modal-body" style="padding-top:0;padding-bottom:0;">
       	<small>The above map view will be shown alongside your comments or feedback.</small>
 		  <div class="form-group" style="margin-top:5px;">
