--- a/application/templates/project/collaborate.html
+++ b/application/templates/project/collaborate.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<h2>Map services</h2>
 	<p>
-		The data for this fieldwork project is accessible via the internet. The easiest access is via Web Map Services (WMS) and Web Feature Services (WFS). These services let you load online geodata in the GIS client (such as QGIS or ArcGIS) on your desktop. The url for map services (both WMS and WFS) for your project data (as well as the base maps) is:
+		The data for this fieldwork project is accessible via the internet. The easiest access is via Web Map Services (WMS) and Web Feature Services (WFS). These services let you load online geodata in the GIS client (such as QGIS or ArcGIS) on your desktop. The url for map services (both WMS and WFS) for your project data is:
 	</p>
 	<p>
 		<strong>WMS and WFS location: </strong><code>http://{{request.host}}/wms/{{cu.wms_key}}</code>
