--- a/application/static/maps.css
+++ b/application/static/maps.css
@@ -91,11 +91,12 @@
         -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
         filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
         padding: 6px;
-        width:320px;
+        width:450px;
         border-radius: 5px;
         border: 1px solid #cccccc;
         bottom: 12px;
         left: -50px;
+        font-size:1.25em;
       }
       .ol-popup:after, .ol-popup:before {
         top: 100%;
