--- a/application/templates/messages.html
+++ b/application/templates/messages.html
@@ -1,19 +1,29 @@
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-	<div class="container-fluid" style="padding-top:17px;background-color:#F5F5F5;border-bottom:1px solid #ddd;">
+	<div id="messages" class="container-fluid" style="padding-top:17px;background-color:#F5F5F5;border-bottom:1px solid #ddd;">
 		<ul class="list-group">
 		{% for category,message in messages %}
-			<li class="list-group-item {% if category=="debug" %}debug-item{% endif %}">
+			
 				{% if category == "error" %}
-					<span style="color:red"><i class="fa fa-times-circle"></i> {{message|safe}}</span>
+					<li class="list-group-item category-{{category}}">
+						<span style="color:red"><i class="fa fa-times-circle"></i> {{message|safe}}</span>
+					</li>
 				{% elif category == "info" %}
-					<span style="color:darkblue"><i class="fa fa-info-circle"></i></span> {{message|safe}}
+					<li class="list-group-item category-{{category}}">
+						<span style="color:darkblue"><i class="fa fa-info-circle"></i></span> {{message|safe}}
+					</li>
 				{% elif category == "ok" %}
-					<span style="color:green"><i class="fa fa-check-circle"></i></span> {{message|safe}}
+					<li class="list-group-item category-{{category}}">
+						<span style="color:green"><i class="fa fa-check-circle"></i></span> {{message|safe}}
+					</li>
 				{% elif category == "debug" %}
-					<span style="color:orange"><i class="fa fa-minus-circle"></i></span> {{message|safe}}
+					<li class="list-group-item category-{{category}}">
+						<span style="color:orange"><i class="fa fa-minus-circle"></i></span> {{message|safe}}
+					</li>
 				{% else %}
-					<span style="color:darkblue"><i class="fa fa-info-circle"></i></span> {{message|safe}}
+					<li class="list-group-item category-other">
+						<span style="color:darkblue"><i class="fa fa-info-circle"></i></span> {{message|safe}}
+					</li>
 				{% endif %}
 			</li>
 		{% endfor %}
