--- a/application/templates/feedback.html
+++ b/application/templates/feedback.html
@@ -35,9 +35,9 @@
 		 -->
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-primary"><i class="fa fa-comment"></i> Submit</button>
-        state:<input type="text" name="map_state" placeholder="map_state" />
-        view:<input type="text" name="map_view" placeholder="map_view" />
-        marker:<input type="text" name="map_marker" placeholder="map_marker" />
+        <input type="hidden" name="map_state" placeholder="map_state" />
+        <input type="hidden" name="map_view" placeholder="map_view" />
+        <input type="hidden" name="map_marker" placeholder="map_marker" />
       </div>
     </div><!-- /.modal-content -->
 
