text changes for webservices page

--- a/application/templates/header.html
+++ b/application/templates/header.html
@@ -32,7 +32,7 @@
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/data"><i class="fa fa-database"></i> Data</a></li>
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/maps"><i class="fa fa-map-marker"></i> Maps</a></li>
 	        <li><a href="/projects/{{project.slug}}/{{user.id}}/feedback"><i class="fa fa-comment"></i> Comments and Feedback</a></li>
-	        <li><a href="/projects/{{project.slug}}/{{user.id}}/collaborate"><i class="fa fa-share-alt"></i> Web services</a></li>
+	        <li><a href="/projects/{{project.slug}}/{{user.id}}/collaborate"><i class="fa fa-share-alt"></i> Web Services</a></li>
         {% endif %}
         {% if current_user.id and project and not user %}
           <!--
